# AMtkSkill

./: .gitignore  README.md  pyproject.toml
devDocs/: runbook.md
fetcher/: common.py
skills/amtk-skill/: SKILL.md
skills/analyze-data/: SKILL.md
skills/query-data/: SKILL.md
skills/run-pipeline/: SKILL.md
tests/: test_data_pipeline.py
